# SudokuSolver

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
data/: sudooo.txt
data/expert/: sudoku_1.txt  sudoku_2.txt  sudoku_3.txt  sudoku_4.txt  sudoku_5.txt
data/hard/: sudoku1.txt
data/simple/: sudoku_1.txt  sudoku_2.txt  sudoku_3.txt  sudoku_4.txt  sudoku_5.txt
scripts/: build  codeanalysis  codeformatting  test
src/sudoku/: __init__.py  backtracking.py  cli.py  domains.py  exceptions.py  grid.py  sudoku.py
src/sudoku-resolver/: backtracking.py  domains.py
src/sudoku_resolver/: __init__.py  __main__.py  cli.py  domains.py  grid.py
tests/: __init__.py
tests/sudoku/: test_cli.py  test_domains.py  test_grid.py  test_project_info.py  test_sudoku.py
