[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sudoku"
version = "0.0.0"
description = "Solve sudokus using CSPs and Python."
authors = ["raphaellndr"]
readme = "README.md"
packages = [
    {include="sudoku", from="src"}
]

[tool.poetry.dependencies]
python = "~3.11"
typer = "0.9.0"
numpy = "1.26.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
black = "^23.10.1"
pylint = "^2.17.7"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
sudoku = "sudoku.__main__:main"

[tool.black]
line-length = 100

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "ex", "Run", "_", # Default names that come from the pylint configuration.
    "x", "y", "z"
]

[tool.pylint.format]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint)
max-line-length = 100

[tool.pylint.master]
ignore = [".git", ".venv", "scripts"]
ignore-patterns = "test_.*?py"

[tool.mypy]
files = ["src/sudoku"]

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4
target-version = "py311"
fix = true
select = ["E", "F", "I"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.coverage.run]
source = ["src/sudoku"]
