[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sudoku-resolver"
version = "0.0.0"
description = "Solve sudokus using CSPs and Python."
authors = ["raphaellndr"]
readme = "README.md"
packages = [
    {include="sudoku", from="src"}
]

[tool.poetry.dependencies]
python = "~3.11"
typer = "0.12.1"
numpy = "2.2.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.6"
pylint = "3.3.5"
mypy = "1.15.0"
pre-commit = "4.1.0"
pytest = "8.3.5"
pytest-cov = "6.0.0"

[tool.poetry.scripts]
sudoku-resolver = "sudoku.__main__:main"

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "ex", "Run", "_", # Default names that come from the pylint configuration.
    "x", "y", "z"
]

[tool.pylint.format]
# Compatibility with black (source: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint)
max-line-length = 100

[tool.pylint.master]
ignore = [".git", ".venv", "scripts"]
ignore-patterns = "test_.*?py"

[tool.mypy]
files = ["src/sudoku"]

[tool.coverage.report]
show_missing = true
fail_under = 10

[tool.coverage.run]
source = ["src/sudoku"]
